# typesense-rust

typesense/: Cargo.toml
typesense/src/: collection_schema.rs
typesense/src/field/: mod.rs
typesense/tests/api/: collection.rs  documents.rs
typesense_codegen/: Cargo.toml  README.md
typesense_codegen/.openapi-generator/: FILES
typesense_codegen/docs/: DocumentsApi.md  SearchParameters.md  SearchResultHit.md
typesense_codegen/src/apis/: documents_api.rs
typesense_codegen/src/models/: mod.rs  multi_search_result.rs  multi_search_result_item.rs  search_grouped_hit.rs  search_parameters.rs  search_result.rs  search_result_hit.rs
