[package]
name = "typesense_codegen"
version = "28.0.0"
authors = ["OpenAPI Generator team and contributors"]
description = "client for typesense generated with openapi spec"
license = "Apache-2.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
